<resources>
    <string name="app_name">Fav Dish</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="splash_screen_title">Fav Dish</string>
    <string name="add_dish">Add Dish</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="image_contentDescription">image</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>
    <string name="lbl_add_dish">ADD DISH</string>
    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_select_cooking_time">Cooking Time In Minutes</string>
    <string name="title_select_type">Type</string>
    <string name="title_select_category">Category</string>


    <string name="err_msg_select_dish_image">Select dish image.</string>
    <string name="err_msg_enter_dish_title">Enter dish title.</string>
    <string name="err_msg_select_dish_type">Select dish type.</string>
    <string name="err_msg_select_dish_category">Select dish category.</string>
    <string name="err_msg_enter_dish_ingredients">Enter dish ingredients.</string>
    <string name="err_msg_select_dish_cooking_time">Select dish cooking time.</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter dish cooking instructions.</string>


</resources>